syntax = "proto3";

package userpb;

option go_package = "user-service/proto/userpb";

service UserService {
  rpc CheckUser (UserRequest) returns (UserResponse);
}

message UserRequest {
  uint32 id = 1;
}

message UserResponse {
  bool exists = 1;
}